...
    android:id="@+id/plan_items2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExhibitsActivity">

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="555dp"
            android:layout_marginBottom="28dp"
            android:onClick="onPlanClicked"
            android:text="Plan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.897"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <AutoCompleteTextView
        android:id="@+id/search_bar"
        android:layout_width="382dp"
        android:layout_height="60dp"
        android:ems="10"
...
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="27dp"
        tools:layout_editor_absoluteY="16dp"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dis"
        android:layout_width="385dp"
        android:layout_height="474dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="41dp"
...
        app:layout_constraintEnd_toStartOf="@+id/number_of_exhibits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:layout_constraintVertical_bias="0.001" />

    <Button
        android:id="@+id/clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="567dp"
        android:layout_marginEnd="176dp"
        android:text="Clear All"
...
