...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionsActivity">

    <Button
        android:id="@+id/getNextDirection"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginStart="290dp"
        android:layout_marginEnd="33dp"
        android:focusable="true"
        android:text="Next"
...
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back"
        android:layout_width="86dp"
        android:layout_height="54dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="2dp"
        android:text="Go Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <Button
        android:id="@+id/skip"
        android:layout_width="76dp"
        android:layout_height="50dp"
        android:layout_marginTop="634dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="49dp"
        android:text="Skip"
...
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832" />

    <Button
        android:id="@+id/step_back"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="49dp"
...
